--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 /* !!! Шаблон в две колонки с адаптивным дизайном и с учетом элементарной семантики !!! */
 /* Правила для экранной версии представления данных */
 @media screen {
@@ -9,9 +11,58 @@
   border: 0;
 }
 
+
+
+
+
+
+caption{
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+table{
+  margin-top: 15px;
+  margin-left: 15px;
+  border: 1px solid grey;
+}
+input{
+  margin-top: 15px;
+  margin-left: 150px;
+  border: 1px solid black;
+}
+.btn-container {
+  display: flex;
+  justify-content: center;
+}
+.btn{
+  padding: 5px 20px;
+  margin: 5px 10px;
+  cursor: pointer;
+}
+.container{
+  display: inline-block;
+  vertical-align: top;
+  
+  /* position: absolute;*/
+}
+div.container{
+ padding-left: 20px;
+}
+th, td {
+  border: 1px solid black;
+  
+}
+
+
+
+
+
+
+
 /* Установки для body: фона, семейства шрифтов и цвета шрифтов */
 body {
-  background: #fff url(/images/white-page.gif) scroll;
+  background: #d8d7a3 url(/images/white-page.gif) scroll;
   color: #000;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
