--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ input{
   margin-left: 150px;
   border: 1px solid black;
 }
+.inputSecond{
+  
+  display: inline-block;
+}
+}
 .btn-container {
   display: flex;
   justify-content: center;
